--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "uae",
   "version": "0.0.0",
   "scripts": {
-    "start":" node-sass -w src/sass/main-rtl.scss  src/css/style.css",
+    "start": " node-sass -w src/sass/main-rtl.scss  src/css/style.css",
     "ng": "ng",
-    "run":"ng serve",
+    "run": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "node-sass": "^4.13.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
