--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uae",
   "version": "0.0.0",
   "scripts": {
-    "start": " node-sass -w src/sass/main-rtl.scss  src/css/style.css && node-sass -w src/sass/main-rtl.scss  src/css/style-ltr.css",
+    "start": " node-sass -w src/sass/main-rtl.scss  src/css/style-rtl.css && node-sass -w src/sass/main-rtl.scss  src/css/style-ltr.css",
     "ng": "ng",
     "run": "ng serve",
     "build": "ng build",
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@types/swiper": "3.4.3",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
