--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
     "swiper": "^5.3.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
